style.css
body {
  background-color: #E8EAF6;
  font-family: "Lato", sans-serif;
  padding-top: 50px;
}

.💀{
  text-align: center;
  font-weight: 400;
  font-size: 40px;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.💀 .little {
  font-size: 15px;
  display: block;
}

ul {
  padding: 0;
  margin: 0;
  list-style: none;

  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;

  -webkit-flex-flow: row wrap;
  justify-content: space-around;

  width: 500px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 80px;
}

li {
  text-align: center;
  float: left;
}

#days, #hours, #minutes, #seconds {
  font-size: 80px;
  font-weight: 700;
  background-color: white;
  color: #E91E63;
  vertical-align: center;
  margin-right: 10px;

  height: 100px;
  width: 100px;

  border-radius: 8px;
  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.2), inset 2px 4px 0 0 rgba(255, 255, 255, 0.08);
}

/* UGH */
#seconds {
  margin-right: 0;
}

/* Thanks Chrome for the bold emoji bug */
#days.💀, #hours.💀, #minutes.💀, #seconds.💀 {
  font-weight: normal;
}
.📇{
  font-size: 12px;
  padding-top: 15px;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.pink {
  color: #E91E63;
}

.text-chunk {
  width: 500px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  text-align: center;
}

.footer {
  padding-top: 20px;
  border-top: 2px solid #E91E63;
  text-transform: uppercase;
  font-size: 10px;
  letter-spacing: .2em;
  padding-right: 6px;
}

.footer a:link, .footer a:visited {
  color: #E91E63;
}

#info {
  width: 100%;
  display: none;
  color: white;
  font-size: 12px;
  line-height: 20px;
}

#info a:link, #info a:visited {
  color: white;
}

.btn {
  background: #E91E63;
  padding: 10px;
  font-size: 12px;
  border-radius: 3px;
  text-decoration: none;
  letter-spacing: 1px;
  color: #666;
  display: none;
  cursor: pointer;
  margin-top: 20px;
}

.btn .text {
  color: white;
  text-transform: uppercase;
  font-weight: bold;
}
.btn:hover #info {
  display: block;
}

